--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&family=Rubik:wght@300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
+font-family: 'Rubik', sans-serif;
 }
 
 .app {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: #283039;
-  /* background: linear-gradient(225deg, rgb(55, 66, 97) 0%, rgb(38, 47, 78) 100%); */
+  background: #0c1a32;
+  /* background: linear-gradient(
+    180deg,
+    rgba(83, 94, 127, 1) 0%,
+    rgba(47, 58, 86, 1) 100%
+  ); */
   color: #f9ffff;
 }
 .app_bottom {
