--- a/src/components/TopFiveCoins/TopFivecoins.css
+++ b/src/components/TopFiveCoins/TopFivecoins.css
@@ -1,9 +1,14 @@
 .topFiveCoins__holder {
-  margin: 30px 0 10px;
+  margin: 0px 0 20px;
   display: flex;
   flex-direction: column;
-  /* background-color: #323c46; */
+  background-color: #20304C;
+ padding: 15px 0 15px 0;
   color: #f9ffff;
+}
+.topFiveCoins__holder-header{
+  color: #fff;
+  opacity: 0.85;
 }
 
 .topFiveCoins {
