--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@
   padding: 0;
   font-family: "IBM Plex Sans", sans-serif;
   font-family: "Rubik", sans-serif;
+  
 }
 
-.app {
+body {
   display: flex;
   flex-direction: column;
   text-align: center;
