--- a/src/components/GlobalData/GlobalData.css
+++ b/src/components/GlobalData/GlobalData.css
@@ -1,17 +1,28 @@
 .globalData{
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 10px;
     background-color: #20304C;
     color: #f9ffff;
     flex-wrap: wrap;
-    margin-bottom: 10px;
+    margin: 10px 10px 0 ;
 }
 .globalData__display{
     display: flex;
+    /* align-items: center; */
     /* justify-content: center; */
-    margin: 10px 20px;
+    margin: 0px 20px;
     flex-wrap: wrap;
+    padding: 0
+}
+.globalData__display > p{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    margin: 0px 20px;
+    flex-wrap: wrap;
+    padding: 0
 }
 .globalData__display-link{
     color:aqua
