--- a/src/elements/Coin/Coin.css
+++ b/src/elements/Coin/Coin.css
@@ -1,76 +1,250 @@
 .coin {
   position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #20304C;
-    width: 280px;
-    height:150px;
-    margin: 3px;
-    padding: 5px;
-    border-radius: 3px;
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #0c1a32;
+  width: 100%;
+  height: 60px;
+  margin: 3px;
+  padding: 5px;
+  border-radius: 3px;
+}
+.coin__top {
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
+}
+.coin_extended {
+  height: 400px;
+  transition: 0.2s ease-in-out;
+  background-color: blueviolet;
+}
+.coin__rank-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  left: 1%;
+}
+.coin__name-and-image-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 10%;
+  padding-top: 8px;
+}
+.coin__image {
+  height: 35px;
+  width: 35px;
+  margin-right: 10px;
+}
+.coin__name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.name {
+  padding-right: 5px;
+}
+.coin__name > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  margin: 0;
+}
+.coin-p {
+  opacity: 1;
+  margin: 0;
+}
+.coin_symbol {
+  padding-top: 2px;
+  color: #8daac6;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+.coin__rank {
+  position: absolute;
+  left: 15px;
+  top: 70px;
+  color: #8daac6;
+}
+.coin__display-name {
+  position: absolute;
+  top: 15px;
+  left: 65px;
+  font-family: "IBM Plex Sans", sans-serif;
+  text-align: left;
+}
+.coin__display-name > p {
+  margin: 0;
+}
+.coin__symbol {
+  opacity: 1;
+  color: #8daac6;
+}
+.coin__price-change-holder {
+  text-align: right;
+  position: absolute;
+  right: 35%;
+}
+.coin__current-price-holder {
+  text-align: right;
+  position: absolute;
+  right: 55%;
+}
+.coin__market-cap-holder {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 73%;
+}
+.coin__market-cap {
+  color: #8daac6;
+}
+.coin_button {
+  position: absolute;
+  top: 0;
+  right: 1%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.coin_button:hover {
+  cursor: pointer;
+}
+.coin__more-info {
+  color: #8daac6;
+  cursor: pointer;
+  z-index: 999;
+}
+.coin__more-info:hover {
+  cursor: pointer;
+}
+.coin__bottom {
+  opacity: 0;
+  background-color: aqua;
+}
+.coin__bottom-display {
+  opacity: 1;
+  background-color: aqua;
+}
+@media (max-width: 1024px) {
+  .coin__top {
+    padding-top: 5px;
   }
-  
+  .coin__rank-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: 1%;
+  }
+  .coin__name-and-image-holder {
+    left: 10%;
+  }
+  .coin-p {
+    font-size: 14px !important;
+  }
+  .coin__current-price-holder {
+    right: 50%;
+  }
+  .coin__price-change-holder {
+    right: 36%;
+  }
+  .coin__market-cap-holder {
+    left: 70%;
+  }
+}
+@media (max-width: 960px) {
+  .coin_symbol {
+    opacity: 0;
+  }
+}
+@media (max-width: 560px) {
   .coin__image {
-    position: absolute;
-    top: 15px;
-    left:15px;
-    height: 35px;
-    width: 35px;
+    height: 25px;
+    width: 25px;
   }
-  .coin__display-name {
-    position: absolute;
-    top:15px;
-    left: 65px;
-      font-family: 'IBM Plex Sans', sans-serif;
-      text-align: left;
-      
-    }
-  .coin__display-name > p {
-     margin: 0;
-      
-    }
-    .coin__symbol{
-      color: #8daac6;
-    }
- 
-  
-  
-  .coin__pricing {
-    position: absolute;
-    top:15px;
-    right:15px;
-    
+  .coin__name-and-image-holder {
+    left: 15%;
   }
-  .coin__current-price{
-    position: absolute;
-    bottom:20px;
-    left:15px;
+  .coin__current-price-holder {
+    right: 37%;
   }
-  .coin__market-cap{
-    color: #8daac6;
-    position: absolute;
-    bottom:-5px;
-    left:15px;
-    font-size: 14px;
+  .coin__price-change-holder {
+    right: 15%;
   }
-  
-  .coin-percent__green {
-    color: #1bc5bd;
+  .coin__market-cap-holder {
+    opacity: 0;
+  }
+}
+@media (max-width: 455px) {
+  .coin__image {
+    height: 25px;
+    width: 25px;
+    margin-right: 10px;
+  }
+  .coin__name-and-image-holder {
+    left: 13%;
+    top: 10px;
+  }
+  .coin__current-price-holder {
+    right: 34%;
+  }
+  .coin__price-change-holder {
+    right: 12%;
+  }
+  .coin__market-cap-holder {
+    opacity: 0;
+  }
+}
+@media (max-width: 420px) {
+  .coin__rank-holder {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 5px;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: 3%;
   }
-  .coin-percent__red {
-    color: #f64e60;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 5px;
+  .coin__image {
+    height: 25px;
+    width: 25px;
+    margin-right: 10px;
   }
-  
-  @media (max-width: 400px){
-  
+  .coin__name-and-image-holder {
+    left: 20%;
   }
+  .coin__current-price-holder {
+    right: 15%;
+  }
+  .coin__price-change-holder {
+    opacity: 0;
+  }
+  .coin__market-cap-holder {
+    display: none;
+  }
+}
+
+
+
+
+/* --------------------------------------------------- */
+.coin-percent__green {
+  font-size: 16px;
+  color: #1bc5bd;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.coin-percent__red {
+  font-size: 16px;
+  color: #f64e60;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+}
