--- a/src/elements/TrendingCoin/TrendingCoin.css
+++ b/src/elements/TrendingCoin/TrendingCoin.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color: #0C1A32;
+  background-color: #0c1a32;
   width: 260px;
   height: 100px;
   margin: 3px;
@@ -32,14 +32,29 @@
 }
 .trendingCoin__current-price {
   position: absolute;
-  bottom:-5px;
-  left:15px;
+  bottom: -5px;
+  left: 15px;
 }
-.trendingCoin__market_cap_rank{
+.trendingCoin__market_cap_rank {
   color: #8daac6;
   position: absolute;
   top: 15px;
   right: 15px;
-  
+
   font-size: 16px;
+}
+@media (max-width: 800px) {
+  .trendingCoin {
+    width: 220px;
+    height: 90px;
+  }
+  .trendingCoin__display-name > p {
+    font-size: 14px;
+  }
+  .trendingCoin__market_cap_rank {
+    font-size: 14px;
+  }
+  .trendingCoin__current-price {
+    font-size: 14px;
+  }
 }
