--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'IBM Plex Sans', sans-serif;
-font-family: 'Rubik', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .app {
@@ -35,6 +35,6 @@ font-family: 'Rubik', sans-serif;
 
 @media (max-width: 800px) {
   .app_bottom {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
