--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,3 +9,12 @@
     text-decoration: none;
     color: #fff
 }
+.header > h1{
+    margin: 0;
+}
+
+@media(max-width: 768px){
+    .header > h1{
+        font-size: 28px;
+    }
+}
